k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1

kind: HTTPRoute

metadata:
  name: todo-route
  namespace: todo-app

spec:

  parentRefs:

    - name: todo-gateway

  rules:

    - matches:

        - path:

            type: PathPrefix

            value: /

      backendRefs:

        - name: flask-service

          port: 8000
